--- a/src/app.css
+++ b/src/app.css
@@ -30,13 +30,14 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
   margin: 0;
-  min-width: 320px;
+  overflow: clip;
   max-height: 100vh;
 }
 
@@ -88,4 +89,23 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+body {
+  height: 100vh;
+}
+
+@keyframes pop-in {
+  from {
+    transform: scale(0.85);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.window-spawn {
+  animation: pop-in 0.15s cubic-bezier(.17,.67,.43,1);
 }
