--- a/src/app.css
+++ b/src/app.css
@@ -41,9 +41,10 @@ body {
   max-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.h-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .card {
