--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 /* Variables only */
 :root {
@@ -26,7 +26,6 @@
 }
 
 a {
-  font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
@@ -37,9 +36,10 @@ a:hover {
 
 body {
   margin: 0;
-  overflow: clip;
-  max-height: 100vh;
+  overflow: hidden;
+  overscroll-behavior: none;
 }
+
 
 .h-center {
   display: flex;
@@ -79,23 +79,6 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-
-body {
-  height: 100vh;
-}
-
 @keyframes pop-in {
   from {
     transform: scale(0.85);
@@ -110,3 +93,5 @@ body {
 .window-spawn {
   animation: pop-in 0.15s cubic-bezier(.17,.67,.43,1);
 }
+
+
